--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
-    "connect": "^3.6.6",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
