--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.6",
+    "vue-load-image": "^0.1.7",
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
